# kafka-e2e-tsting

./: README.md  buildAndStartE2ESample.sh  docker-compose.yml  pyproject.toml
consumer/: consumer.py  consumer_batchMessage.dockerfile  consumer_batchMessage.py  consumer_fromNewest.dockerfile  consumer_fromNewest.py  consumer_fromOldest.dockerfile  dockerfile
producer/: dockerfile  producer.py
